
plugins:
- added new presolver convertinttobin, which converts bounded integer variables to their binary representation, e.g.
  for integer variable 0 <= x <= 10 the binary variables y0, y1, y2, and y3 are created, such that
  1 y0 + 2 y1 + 4 y2 + 8 y3 <= 10 and x = 1 y0 + 2 y1 + 4 y2 + 8 y3

fixed bugs:
- fixed minor bugs with respect to counting generated and lifted cuts in sepa_oddcycle

parameters:
- new parameter <presolving/convertinttobin/maxdomainsize> by default is set to SCIP_LONGINT_MAX, which deternmines
  the domainsize for which integers are converted to their binary representation
- new parameter <presolving/convertinttobin/onlypoweroftwo> by default is set to FALSE, that parameter allows you to
  only convert integer variables with a domainsize of 2^p - 1 to their binary representation
- new parameter <presolving/convertinttobin/samelocksinbothdirections> by default is set to FALSE, that parameter allows
  you to convert only integer variables to their binary representation, which have the same amount of up- and downlocks
- branching/fullstrong/reevalage changed from an integer to a longint parameter
- new parameter for changing the timingmask for calling the propagtion method of all propagator plugins
  propagating/%s/timingmask and all constraint plugins constraints/%s/timingmask
- new parameter constraints/indicator/dualreductions to enable dual presolving/propagation steps
- new parameters constraints/indicator/{sepacouplingcuts,sepacouplinglocal} to enable separation of (local) cuts
- new parameters constraints/indicator/{maxsepacuts,maxsepacutsroot} to restrict the number of separated cuts
- new parameter separating/oddcycle/maxunsucessfull to automatically turn off separation

features:
- SCIPcomputeLPRelIntPoint with normtype='s' now uses homogenized LP for computing rel.int. point too and allow to
  set relaxrows = FALSE
- the check script now recognizes MIQCP and MINLP instances
- new column showing the pseudo objective value

